--- a/resumes/static/resumes/details.css
+++ b/resumes/static/resumes/details.css
@@ -1,109 +1,50 @@
+body {
+    /* Default font for entire website - move this to base.css eventually */
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings: "slnt" 0;
+
+    /* Default background color - slightly off white */
+    background-color: #F7F7F7;
+
+    /* Default text color - slightly off black */
+    color: #222222;
+}
+
+
 #viewing-options a{
     text-decoration: underline;
     margin-right: 10px;
 }
 
-.container-fluid {
-    margin: 0px 0px;
-    width: 100%;
-}
-
-.col-md-8 {
-    max-width: 800px;
-}
-
-.col-md-4 {
-    padding-left: 30px;
-}
-
-.comment-user-header {
-    display: inline-block;
-}
-
-.owner-designation {
-    background-color:#007bff;
-    color: white;
-    border-radius: 5px;
-    padding: 0px 5px;
-}
-
-.comment-username {
-    margin-right: 5px;
-    font-weight: bold;
-}
-
-#owner-comment-separator {
-    border-top: 2px solid black;
-    margin: 10px 0px;
-}
-
-.section-title {
-    font-size: 20px;
-}
-
-#scrollable-comments {
-    /* If max-height was higher, and a resume had a lot of comments, the user wouldn't see
-    the write comment box unless they scrolled down. We want the user to see the write
-    comment box right away. */
-    max-height: 400px;
-
-    overflow-y: scroll;
-}
-
-.card {
-    margin: 5px 0;
-    margin-left: auto;
-    margin-right: auto;
-    align-content: center;
-    max-width: 500px;
-}
-
-.pagination {
-    text-align: center;
-    margin-top: 20px;
-}
-
-.page-buttons-group {
+.resume-info-top-line {
+    /* If screen width gets too small, bring icon and text to next line together. */
     display: flex;
-    justify-content: center;
-    gap: 5px;
-    margin-left: auto;
-    margin-right: auto;
+    flex-wrap: wrap;
 }
 
-.pagination button {
-    padding: 5px 10px;
-    margin: 0 5px;
-    cursor: pointer;
-    outline: 1px solid #65615f;
-    border-radius: 1px;
-    border: none;
+.resume-info-top-line-element {
+    margin-right: 10px;
+    margin-bottom: 10px;
 }
 
-.hidden {
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    height: 1px;
-    overflow: hidden;
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
+.resume-description {
+    margin-bottom: 10px;
 }
 
-.pagination button.active {
-    background-color: #007bff;
-    color: white;
-}
-
-#rating-section {
-
+#embedded-pdf {
+    /* Don't make user need to scroll horizontally if viewport width is too small */
+    max-width: 100%;
 }
 
 #rating-scale {
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
-    margin: 20px;
+    margin: 20px 0px;
+    width: 500px;
 }
 
 .rating-option {
@@ -111,23 +52,26 @@
     justify-content: center;
     align-items: center;
     margin: 0px 2px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
+    border: 1px solid #cccdcf;
     border-radius: 2px;
-    width: 5%;
+    /* Remove width or min-width, and it collapses width-wise. I'm not sure why. */
+    width: 10px;
+    min-width: 5%;
     transition: transform .2s
 }
 
 /* .rating-option:hover and .rating-option-selected should be the same */
 .rating-option:hover {
     background-color: #007bff;
-    color: white;
+    color: #F7F7F7;
     cursor: pointer;
     transform: scale(1.25);
 }
 
 .rating-option-selected {
     background-color: #007bff;
-    color: white;
+    color: #F7F7F7;
     cursor: pointer;
     transform: scale(1.25);
 }
@@ -137,7 +81,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0px 5px;
+    /* margin: 0px 5px; */
+}
+
+.rating-label-left {
+    margin-right: 5px;
+}
+
+.rating-label-right {
+    margin-left: 5px;
 }
 
 #ratingForm {
@@ -150,12 +102,87 @@
 
     /* Border should be same color as its background, since it should only be visible when hovered over
     We still need to include border so border spacing is consistent when hovered over */
-    border: 1px solid rgb(255, 255, 255);
-    border-radius: 4px;
+    border: 1px solid #F7F7F7;;
+    border-radius: 5px;
 }
 
 #submit-comment-button:hover {
     cursor: pointer;
-    background-color: rgb(215, 215, 215);
-    border: 1px solid rgb(150, 150, 150);
+    background-color: #cccdcf;
+    border: 1px solid #cccdcf;
+}
+
+/* TODO: Needs to be applied sitewide */
+.content {
+    margin: 0 10%;
+}
+
+.page-header {
+    font-size: 35px;
+    font-weight: bold;
+
+    /* border-bottom: 1px solid #cccdcf; */
+    margin-bottom: 20px;
+    margin-top: 35px;
+}
+
+.cursive-header {
+    font-family: "Style Script", cursive;
+    font-weight: 400;
+    font-style: normal;
+
+    border-bottom: 1px solid #cccdcf;
+    margin-bottom: 20px;
+    margin-top: 35px;
+}
+
+#write-comment-area {
+    padding-bottom: 20px;
+}
+
+.write-comment-input {
+    /* Hold 3 lines of text before scrollbar appears */
+    min-height: 95px;
+    /* Do not expand vertically past space needed for max length of comment text, 2000 characters. */
+    max-height: 395px;
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #cccdcf;
+    border-radius: 5px;
+    /* Don't let user resize textarea horizontally */
+    resize: vertical;
+}
+
+.write-comment-input:focus {
+    outline: none !important;
+}
+
+.comment {
+    margin-bottom: 30px;
+}
+
+.comment-user-header {
+    display: inline-block;
+}
+
+.owner-designation {
+    background-color:#007bff;
+    color: #F7F7F7;
+    border-radius: 5px;
+    padding: 0px 5px;
+}
+
+.comment-username {
+    margin-right: 5px;
+}
+
+.username-link {
+    color: inherit;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.username-link:hover {
+    color: inherit;
+    text-decoration: underline;
 }
