--- a/resumes/static/resumes/details.css
+++ b/resumes/static/resumes/details.css
@@ -1,19 +1,3 @@
-body {
-    /* Default font for entire website - move this to base.css eventually */
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-    font-variation-settings: "slnt" 0;
-
-    /* Default background color - slightly off white */
-    background-color: #F7F7F7;
-
-    /* Default text color - slightly off black */
-    color: #222222;
-}
-
-
 #viewing-options a{
     text-decoration: underline;
     margin-right: 10px;
@@ -113,18 +97,9 @@ body {
 }
 
 /* TODO: Needs to be applied sitewide */
-.content {
+/* .content {
     margin: 0 10%;
-}
-
-.page-header {
-    font-size: 35px;
-    font-weight: bold;
-
-    /* border-bottom: 1px solid #cccdcf; */
-    margin-bottom: 20px;
-    margin-top: 35px;
-}
+} */
 
 .cursive-header {
     font-family: "Style Script", cursive;
