--- a/resumes/static/resumes/upload.css
+++ b/resumes/static/resumes/upload.css
@@ -18,10 +18,7 @@ input {
     border: 2px solid lightgrey;
     border-radius: 5px;
     padding: 2px;
-}
-
-.warning-box * {
-    /* display: inline-block; */
+    margin-bottom: 10px;
 }
 
 .warning-symbol {
@@ -35,4 +32,21 @@ input {
 
 #id_groupsSharedWith {
     display: none
+}
+
+.checkbox input, .checkbox label {
+    display: inline-block;
+    width: fit-content;
+}
+
+.checkbox input {
+    margin-right: 5px;
+}
+
+.form-field {
+    margin-bottom: 25px;
+}
+
+.form-field-thin {
+    margin-bottom: 10px;
 }
