--- a/resumes/templates/resumes/upload.html
+++ b/resumes/templates/resumes/upload.html
@@ -20,18 +20,30 @@
         {% comment %}width: fit-content ensures the default browser error message when a required file input is _blank
         is centered with the content instead of centered in the middle of the page since form-fields expand to fit the page{% endcomment%}
         <div class="form-field" style='width: fit-content;'>
-            <label for="{{ form.file.id_for_label }}">Upload resume (pdf required)</label>
-            {{ form.file }}
+            <label for="{{ form.file.id_for_label }}">Upload resume (pdf only)</label>
+            {% comment %}TODO: Poor UX.{% endcomment %}
+            <p>To convert any file type to pdf, use <a href="https://www.freeconvert.com/pdf-converter" target="_blank">freeconvert.com</a>.</p>
+            {% comment %}TODO: Not a secure solution to verify pdf at all, but good enough for now.{% endcomment %}
+            <input type="file" name="{{ form.file.name }}" id="{{ form.file.id_for_label }}" accept=".pdf" required>
+            {% for error in form.file.errors %}
+                <p class="error-msg">{{ error }}</p>
+            {% endfor %}
         </div>
 
         <div class="form-field">
             <label for="{{ form.name.id_for_label }}">If you had to refer to this specific resume, what name would you use?</label>
             {{ form.name }}
+            {% for error in form.name.errors %}
+                <p class="error-msg">{{ error }}</p>
+            {% endfor %}
         </div>
 
         <div class="form-field">
             <label for="{{ form.description.id_for_label }}">The description you put here will be displayed at the top of this resume's page:</label>
             {{ form.description }}
+            {% for error in form.description.errors %}
+                <p class="error-msg">{{ error }}</p>
+            {% endfor %}
         </div>
 
         <div class="form-field-thin">
@@ -39,15 +51,24 @@
                 {{ form.commentsEnabled }}
                 <label for="{{ form.commentsEnabled.id_for_label }}">Allow comments</label>
             </div>
+            {% for error in form.commentsEnabled.errors %}
+                <p class="error-msg">{{ error }}</p>
+            {% endfor %}
         </div>
 
         <div class="form-field">
-            <label for="{{ forms.visibility.id_for_label }}">Visibility</label>
+            <label for="{{ form.visibility.id_for_label }}">Visibility</label>
             {{ form.visibility }}
 
             <div class="checkbox">
                 {{ form.groupsSharedWith }}
             </div>
+            {% for error in form.visibility.errors %}
+                <p class="error-msg">{{ error }}</p>
+            {% endfor %}
+            {% for error in form.groupsSharedWith.errors %}
+            <p class="error-msg">{{ error }}</p>
+            {% endfor %}
         </div>
 
         <button type="submit" class="blue-btn">Submit</button>
