--- a/resumes/templates/resumes/user.html
+++ b/resumes/templates/resumes/user.html
@@ -16,6 +16,8 @@
 
 
 <h2 class="sub-header">Resumes</h2>
+<a href="{% url 'upload' %}">Upload a new resume</a>
+
 {% if resumes %}
 <div class="table-container">
 <table>
