--- a/static/base.css
+++ b/static/base.css
@@ -96,3 +96,13 @@ body {
     color: red;
     font-style: italic;
 }
+
+.username-link {
+    color: inherit;
+    text-decoration: none;
+    font-weight: bold;
+}
+.username-link:hover {
+    color: inherit;
+    text-decoration: underline;
+}
